force-app/main/default/objects/AA_Customer__c/AA_Customer__c.object-meta.xml
<CustomObject>
    <label>AA Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AA Customer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>