force-app/main/default/objects/AA_Customer__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <referenceTo>AA_Business__c</referenceTo>
    <relationshipLabel>Customer</relationshipLabel>
    <relationshipName>Customer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>