force-app/main/default/objects/AA_Customer__c/fields/Comments_From_Customer__c.field-meta.xml
<CustomField>
    <fullName>Comments_From_Customer__c</fullName>
    <description>Comments provided from the customer</description>
    <inlineHelpText>Comments provided from the customer</inlineHelpText>
    <label>Comments From Customer</label>
    <type>TextArea</type>
</CustomField>