force-app/main/default/objects/AA_Customer__c/fields/Has_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Has_Allergies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The specific allergy will be described in the comments</description>
    <inlineHelpText>The specific allergy will be described in the comments</inlineHelpText>
    <label>Has Allergies</label>
    <type>Checkbox</type>
</CustomField>