force-app/main/default/objects/AA_Customer__c/fields/Has_Allergy_Esmalte_Semipermanente__c.field-meta.xml
<CustomField>
    <fullName>Has_Allergy_Esmalte_Semipermanente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Allergy Esmalte Semipermanente</label>
    <type>Checkbox</type>
</CustomField>