force-app/main/default/objects/AA_Customer__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <description>Comments made by the internal team about this customer</description>
    <inlineHelpText>Comments made by the internal team about this customer</inlineHelpText>
    <label>Internal Comments</label>
    <type>TextArea</type>
</CustomField>