force-app/main/default/objects/AA_Customer__c/fields/Is_New_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Customer__c</fullName>
    <formula>Count_Appointments_Done__c == 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is New Customer</label>
    <type>Checkbox</type>
</CustomField>