force-app/main/default/objects/AA_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>