force-app/main/default/objects/AA_Customer__c/listViews/Silvina_Unas.listView-meta.xml
<ListView>
    <fullName>Silvina_Unas</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Email__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Name__c</field>
        <operation>startsWith</operation>
        <value>Silvina</value>
    </filters>
    <label>Silvina Uñas</label>
</ListView>